# KongEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_vulkan.bat  compile_vulkan_shader.bat
TapEngine/src/TapCore/: BoxShape.cpp  BoxShape.h  CollisionHelper.cpp  CollisionHelper.h  CollisionSolver.cpp  CollisionSolver.h  Integration.cpp  Intergration.h  RigidBody.cpp  RigidBody.h  Shape.cpp  Shape.h  SphereShape.cpp  SphereShape.h  TapBodyManager.cpp  TapBodyManager.h  TapCore.cpp  TapCore.hpp  TapCorePriv.hpp  TapScene.cpp  TapScene.hpp  Transform.cpp  Transform.h
TapEngine/src/TapSample/: main.cpp
docs/: AtmosRender.md
msvc/tinyGL/: tinyGL.sln
msvc/tinyGL/tinyGL/: tinyGL.vcxproj  tinyGL.vcxproj.filters
resource/scene/: hello.json  hello.yaml  hello_assimp.json  hello_assimp.yaml  hello_blend.json  hello_blend.yaml  hello_brdf.json  hello_brdf.yaml  hello_cascade_shadowmap.yaml  hello_csm.yaml  hello_instancing.json  hello_instancing.yaml  hello_lots_models.yaml  hello_normal_map.json  hello_normal_map.yaml  hello_pbr_texture.json  hello_pbr_texture.yaml  hello_porsche.json  hello_porsche.yaml  hello_reflective_shadowmap.yaml  hello_shadow.json  hello_shadow_directionallight.json  hello_shadow_directionallight.yaml  hello_shadow_pointlight.json  hello_shadow_pointlight.yaml  hello_ssr.yaml  hello_terrain.yaml  hello_water.yaml
resource/shader/: basic_pbr.frag  basic_pbr.vert  basic_ssbo.frag  basic_ssbo.vert  blend.frag  blend.vert  brdf.frag  brdf.vert  brdf_instancing.frag  brdf_instancing.vert  brdf_normalmap.frag  brdf_normalmap.vert  brdf_shadowmap.frag  brdf_shadowmap.vert  defer_info.frag  defer_info.vert  defer_pbr.frag  defer_pbr.vert  emit.frag  emit.vert  fragment.shader  model.frag  model.vert  postprocess.frag  shadowmap.frag  shadowmap.vert  shadowmap_debug.frag  shadowmap_pointlight.frag  shadowmap_pointlight.geom  shadowmap_pointlight.vert  shadowmap_vert.shader  skybox.vert  skybox_frag.shader  skybox_vert.shader  ssao.frag  ssao.vert  ssao_blur.frag  ssr.frag  terrain.vert  utilitybox.frag  (+2 more)
resource/shader/Vulkan/: common.glsl  simple_postprocess.vulkan.frag  simple_postprocess.vulkan.vert  simple_shader.vulkan.frag  simple_shader.vulkan.vert
resource/shader/common/: brdf_common.glsl  cloud_noise_gen.glsl  common.glsl  noise_gen.glsl  perlin_noise.glsl
resource/shader/postprocess/: DOF.frag  dilate_blur.frag  gaussian_blur.frag  pre_postprocess.frag  radical_blur.frag
resource/shader/shadow/: csm.geom  csm.vert  pcss.glsl  reflective_shadowmap.frag  reflective_shadowmap.vert  rsm_sample_points.glsl  shadowmap.vert  shadowmap_debug.frag  shadowmap_pointlight.geom  shadowmap_pointlight.vert
resource/shader/skybox/: atmosphere.frag  atmosphere.vert  brdf_lut.frag  brdf_lut.vert  irradiance_map.frag  irradiance_map.vert  prefilter_map.frag  skybox.frag  skybox.vert  sphere_to_cube.frag
resource/shader/terrain/: terrain_cpu.frag  terrain_cpu.vert  terrain_tess.frag  terrain_tess.tesc  terrain_tess.tese  terrain_tess.vert
resource/shader/volumetric_cloud/: perlin_worley.comp  volumetric_cloud.comp  weather.comp  worley.comp
resource/shader/water/: gerstner_wave.frag  gerstner_wave.tese  gerstner_wave.vert  water.frag  water.vert
resource/sky_box/dark_sky/: darkskies_dn.tga  darkskies_up.tga
src/: common.h  main.cpp  message.cpp  message.h  model.cpp  model.h  render.cpp  render.h  renderobj.cpp  renderobj.h  skybox.cpp  skybox.h  tgaimage.cpp  tgaimage.h  utilityshape.cpp  utilityshape.h
tinyGL/msvc/tinyGL/: tinyGL.sln
tinyGL/src/: Actor.cpp  Actor.h  Actor.hpp  BoxShape.cpp  BoxShape.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Component.h  Engine.cpp  Engine.h  JsonParser.cpp  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  ModelMeshComponent.cpp  ModelMeshComponent.h  PostProcess.cpp  PostProcess.h  QuadShape.cpp  QuadShape.h  RenderCommon.h  RenderSystem.hpp  Scene.cpp  Scene.h  SphereShape.h  Utils.hpp  YamlParser.cpp  app.cpp  app.hpp  common.h  light.cpp  light.h  main.cpp  message.cpp  message.h  model.cpp  model.h  (+17 more)
tinyGL/src/Component/: CameraComponent.cpp  CameraComponent.h  Component.h  LightComponent.cpp  LightComponent.h
tinyGL/src/Parser/: JsonParser.cpp  JsonParser.h  ResourceManager.cpp  ResourceManager.h  YamlParser.cpp  YamlParser.h
tinyGL/src/Render/: DeferRenderSystem.cpp  DeferRenderSystem.hpp  PostProcessRenderSystem.cpp  PostProcessRenderSystem.hpp  RenderCommon.cpp  (+10 more)
(+175 files in other folders)
